Exploring implement Validator springframework, @InitBinder

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,2 @@
-#good.morning.message=Good Morning
-
-student.name.error= Student Name Error Message
-student.phone.error= Student Phone Error Message
+student.phone.error = Phone number must be start with +84 and no more than 12 characters.
+student.email.error = Email should be in correct format.
